--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "nodemon": "^3.1.1"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.4.0"
   }
