--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,6 @@
         { "src": "./index.js", "use": "@vercel/node" }
       ],
       "rewrites": [
-        { "source": "/(.*)", "destination": "./routes/index.js" }
+        { "source": "/(.*)", "destination": "/" }
       ]
 }
