--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "track-zone-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "api/index.js",
   "type": "module",
   "author": "tanzir ibne ali",
   "license": "MIT",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node api/index.js",
+    "dev": "nodemon api/index.js"
   },
   "devDependencies": {
     "nodemon": "^3.1.1"
@@ -18,5 +18,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.4.0"
+  },
+  "engines": {
+    "node": ">=14.x"
   }
 }
